# yast-firstboot

./: .gitignore  .rubocop.yml  .travis.yml  Dockerfile  MAINTAINER  POTCOMMENTS  README.md  RPMNAME  VERSION  configure.in.in  yast2-firstboot.spec.in
.github/workflows/: ci.yml
control/: Makefile.am  firstboot.glade  firstboot.xml
desktop/: Makefile.am  firstboot.desktop  org.opensuse.yast.Firstboot.desktop
doc/: Makefile.am  README  firstboot-doc.xml  firstboot-section.xml  firstboot-section_mod.xml  installer_and_firstboot.md  testing_wsl.md
doc/autodocs/: Makefile.am
firstboot/: .cvsignore  yast2-firstboot.spec.in
firstboot/agents/: Makefile.am
firstboot/doc/: .cvsignore  Makefile.am
firstboot/scripts/: Makefile.am  YaST2.Firstboot  firstboot
firstboot/src/: Makefile.am  firstboot.ycp  firstboot_desktop.ycp  firstboot_finish.ycp  firstboot_language.ycp  firstboot_write.ycp  product_start.ycp  routines.ycp
firstboot/src/control/: Makefile.am  firstboot.xml
firstboot/src/data/: firstboot_finish.txt  firstboot_license.txt  firstboot_welcome.txt  sysconfig.firstboot
package/: yast2-firstboot.changes  yast2-firstboot.spec
scripts/: Makefile.am  YaST2.Firstboot  YaST2.firstboot2  YaST2.reconfig  doit-firstboot  firstboot
scripts/Firstboot-Stage/: Makefile.am  S02-logging  S03-language  S04-start  S05-cleanup  S06-services  S08-start  S09-cleanup
src/: Firstboot.ycp  Makefile.am  firstboot.ycp  firstboot_auto.ycp  firstboot_bootloader_reconfigure.ycp  firstboot_desktop.ycp  firstboot_finish.ycp  firstboot_keyboard.ycp  firstboot_language.ycp  firstboot_language_keyboard.ycp  firstboot_license.ycp  firstboot_license_novell.ycp  firstboot_licenses.ycp  firstboot_network_write.ycp  firstboot_ntp.ycp  firstboot_ssh.ycp  firstboot_timezone.ycp  firstboot_welcome.ycp  firstboot_write.ycp  product_start.ycp  routines.ycp
src/autoyast-rnc/: firstboot.rnc
src/clients/: firstboot.rb  firstboot_auto.rb  firstboot_bootloader_reconfigure.rb  firstboot_bootloader_reconfigure.ycp  firstboot_config.rb  firstboot_config.ycp  firstboot_configuration_management.rb  firstboot_desktop.rb  firstboot_desktop.ycp  firstboot_finish.rb  firstboot_hostname.rb  firstboot_keyboard.rb  firstboot_keyboard.ycp  firstboot_language.rb  firstboot_language_keyboard.rb  firstboot_language_keyboard.ycp  firstboot_license.rb  firstboot_license.ycp  firstboot_license_novell.rb  firstboot_licenses.rb  firstboot_network_write.rb  firstboot_network_write.ycp  firstboot_ntp.rb  firstboot_ntp.ycp  firstboot_root.rb  firstboot_ssh.rb  firstboot_timezone.rb  firstboot_user.rb  firstboot_welcome.rb  firstboot_welcome.ycp  firstboot_write.rb  firstboot_wsl.rb  firstboot_wsl_product_selection.rb
src/control/: Makefile.am  firstboot.xml
src/data/: Makefile.am  firstboot.desktop  firstboot.rnc  sysconfig.firstboot
src/fillup/: sysconfig.firstboot
src/include/firstboot/: routines.rb
src/lib/y2firstboot/: wsl_config.rb
src/lib/y2firstboot/clients/: configuration_management.rb  firstboot_ssh.rb  hostname.rb  licenses.rb  root.rb  user.rb  wsl.rb  wsl_product_selection.rb
src/lib/y2firstboot/dialogs/: wsl_product_selection.rb
src/modules/: Firstboot.rb
src/scrconf/: cfg_firstboot.scr
test/: test_helper.rb
test/y2firstboot/: wsl_config_test.rb
test/y2firstboot/clients/: configuration_management_test.rb  firstboot_ssh_test.rb  hostname_test.rb  licenses_test.rb  root_test.rb  user_test.rb  wsl_product_selection_test.rb  wsl_test.rb
test/y2firstboot/dialogs/: wsl_product_selection_test.rb
wsl/: firstboot.xml  firstboot.ycontrol.xml
